Add cache-generation script for DBpedia Live