@@ -93,6 +93,11 @@
                             <mainClass>org.dbpedia.extraction.scripts.CreateDownloadPage</mainClass>
                             <jvmArgs><jvmArg>-server</jvmArg><jvmArg>-XX:+UseConcMarkSweepGC</jvmArg></jvmArgs>
                         </launcher>
+                        <launcher>
+                            <id>UnmodifiedFeederCacheGenerator</id>
+                            <mainClass>org.dbpedia.extraction.scripts.UnmodifiedFeederCacheGenerator</mainClass>
+                            <jvmArgs><jvmArg>-server</jvmArg><jvmArg>-XX:+UseConcMarkSweepGC</jvmArg></jvmArgs>
+                        </launcher>
                     </launchers>
                 </configuration>
 
